// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > map addComponent should work 1`] = `
Object {
  "type": "add component to map",
}
`;

exports[`actions > map removeComponent should work 1`] = `
Object {
  "type": "remove component from map",
}
`;

exports[`actions > map setCenter should work 1`] = `
Object {
  "payload": Object {
    "lat": 12,
    "lon": 34,
  },
  "type": "set map center",
}
`;

exports[`actions > map setMapState should work 1`] = `
Object {
  "type": "set map state",
}
`;

exports[`actions > map setZoom should work 1`] = `
Object {
  "type": "set map zoom",
}
`;
